Merged: [turbofan] Fix arm backend matching of (x >>> 24) & 0xffff.

Revision: b1c12289815c0f3880355b80954b346d6a2ae48f

BUG=chromium:739902
LOG=N
NOTRY=true
NOPRESUBMIT=true
NOTREECHECKS=true
R=bmeurer@chromium.org

Change-Id: I9b6ddf251e08667983a49005441e8931b5511418
Reviewed-on: https://chromium-review.googlesource.com/660098
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Cr-Commit-Position: refs/branch-heads/6.2@{#11}
Cr-Branched-From: efa2ac4129d30c7c72e84c16af3d20b44829f990-refs/heads/6.2.414@{#1}
Cr-Branched-From: a861ebb762a60bf5cc2a274faee3620abfb06311-refs/heads/master@{#47693}